Update TraMS dependencies to latest versions